--- a/package.json
+++ b/package.json
@@ -93,7 +93,6 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^5.3.3",
-    "tslib": "^1.10.0"
+    "styled-components": "^5.3.3"
   }
 }
